# train

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.txt  eslint.config.js  openapi.json  package.json  pnpm-lock.yaml  problems to think about.txt  pyproject.toml  pyrightconfig.json  requirements.txt  tsconfig.base.json  tsup.config.ts
.github/: renovate.json
dbschema/: interfaces.ts
dbschema/edgeql-js/: __spec__.d.ts  __spec__.mjs  cardinality.d.ts  cardinality.mjs  cast.d.ts  cast.mjs  castMaps.d.ts  castMaps.mjs  casting.d.ts  casting.mjs  collections.d.ts  collections.mjs  config.json  detached.d.ts  detached.mjs  external.d.ts  external.mjs  for.d.ts  for.mjs  funcops.d.ts  funcops.mjs  globals.d.ts  globals.mjs  group.d.ts  group.mjs  hydrate.d.ts  hydrate.mjs  imports.d.ts  imports.mjs  index.d.ts  index.mjs  insert.d.ts  insert.mjs  json.d.ts  json.mjs  literal.d.ts  literal.mjs  operators.d.ts  operators.mjs  params.d.ts  (+25 more)
dbschema/edgeql-js/modules/: cal.d.ts  cal.mjs  cfg.d.ts  cfg.mjs  default.d.ts  default.mjs  fts.d.ts  fts.mjs  math.d.ts  math.mjs  schema.d.ts  schema.mjs  std.d.ts  std.mjs  sys.d.ts  sys.mjs
dbschema/edgeql-js/modules/std/: enc.d.ts  enc.mjs
src/: index.ts  init.sql  tmp.py  train.db  tsconfig.json
src/client/: index.html  package.json  pnpm-lock.yaml  reset.css  tailwind.config.js  template.xlsx
src/client/src/: App.tsx  index.css
src/client/src/app/api/: api.ts  models.ts
src/client/src/app/dashboard/: form.tsx  page.tsx  schedule.tsx  view.tsx
src/client/src/components/: app-sidebar.tsx  version-switcher.tsx
src/data/: ARR-RU-DT.json  ARR-RU.json  block_handlers.json  block_provider.py  infer_section_block_relation.py  mas_sections.json  masection.json  node.json  script.py  section_handlers.json  section_provider.py  train.json  train.py  trains_arr_ru.json
src/static/: index.html  openapi.json  openapi.yaml
src/tmp/: 1.csv  1.txt  2.csv  2.xlsx  dirty_mas.json  get_section_block.py  input.csv  mas.bhandlers.json  mas.json  mas.shandlers.json  mas.txt  mas1.json  output.csv  output.xlsx  take.py
src/tmppromaxultra/: SR_Rolling_Block_Programme copy.csv  SR_Rolling_Block_Programme.csv  block_handlers.json  block_provider.py  infer_section_block_relation.py  mas2.json  masection.json  section_handlers.json  section_provider.py
src/train/: .~lock.input.xlsx#  __main__.py  app.py  db.py  exceptions.py  file_management.py  input.xlsx  logging.py  main2.py  output.csv  output.xlsx  utils.py
src/train/file_management/: file_manager.py
src/train/file_management/formats/: __init__.py  format.py  mas.py
src/train/file_management/handlers/: __init__.py  excel.py  handler.py
src/train/models/: block.py  completed_task.py  maintenance_window.py  node.py  requested_task.py  section.py  slot.py  station.py  task.py  train.py  user.py
src/train/openapi/: doc.py  docstring_parser.py  string_parser.py
src/train/repositories/: node.py  requested_task.py  section.py  slot.py  task.py  train.py
src/train/schemas/: requested_task.py  task.py
src/train/services/: node.py  requested_task.py  section.py  slot.py  task.py  train.py
src/ui/: package-lock.json  package.json
src/ui/src/: App.css  App.js
