[tool.poetry]
name = "train"
version = "0.1.0"
description = "A train Project"
license = "MIT"
authors = [
    "nandhagk <nandhagopi@gmail.com>",
    "Dragon-KK <kaushikg.iyer@gmail.com>",
    "ArivoliR <>"
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
openpyxl = "^3.1.4"
flask = "^3.0.3"
waitress = "^3.0.0"
result = "^0.17.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.9.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.4.0"
shed = "^2024.0.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
start = "cd src && python -m train"
precommit = "pre-commit install"

[tool.isort]
profile = "black"
case_sensitive = true

[tool.ruff]
ignore = [
  # Missing Docstrings
  "D100",
  "D101",
  "D102",
  "D104",
  "D105",
  "D106",
  "D107",
  # Docstring Whitespace
  "D203",
  "D212",
  "D214",
  "D215",
  # Type Annotations
  "ANN002",
  "ANN003",
  "ANN101",
  "ANN102",
  "ANN201",

  "FBT001",
  "S101",
  "TRY002",
  "A001",
  "A002",
  "A003",
  "ERA001"
]
select = ["ALL"]

[tool.pyright]
include = ["train"]
