[tool.poetry]
name = "train"
version = "0.1.0"
description = "A train Project"
license = "MIT"
authors = [
    "nandhagk <nandhagopi@gmail.com>",
    "Dragon-KK <kaushikg.iyer@gmail.com>",
    "ArivoliR <>"
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
openpyxl = "^3.1.4"
blacksheep = {git = "https://github.com/nandhagk/BlackSheep"}
uvicorn = {extras = ["standard"], version = "^0.30.5"}
msgspec = "^0.18.6"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.9.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.5.0"
shed = "^2024.0.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
start = "cd src && python -m train"
precommit = "pre-commit install"

[tool.isort]
profile = "black"
case_sensitive = true

[tool.ruff.lint]
ignore = [
  # Missing Docstrings
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # Docstring Whitespace
  "D203",
  "D212",
  "D214",
  "D215",
  # Type Annotations
  "ANN002",
  "ANN003",
  "ANN101",
  "ANN102",
  "ANN201",

  "FBT001",
  "FA102",
  "S101",
  "TRY002",
  "I001",
  "A001",
  "A002",
  "A003",
  "ERA001"
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/data/*" = ["ALL"]

[tool.pyright]
include = ["train"]
